force-app/main/default/objects/Competitor_Intelligence__c/Competitor_Intelligence__c.object-meta.xml
<CustomObject>
    <label>Competitor Intelligence</label>
    <nameField>
        <label>Competitor Intelligence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Intelligence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>