force-app/main/default/objects/Competitor_Intelligence__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Intelligence</relationshipLabel>
    <relationshipName>Competitor_Intelligence</relationshipName>
    <type>Lookup</type>
</CustomField>