force-app/main/default/objects/Competitor_Intelligence__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>This field should only be filled out when Org Resource Change is selected as the competitive intelligence &quot;type&quot;</inlineHelpText>
    <label>Role Change Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>