force-app/main/default/objects/Competitor_Intelligence__c/fields/Rumor_Source__c.field-meta.xml
<CustomField>
    <fullName>Rumor_Source__c</fullName>
    <label>Rumor Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Industry source</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>