force-app/main/default/objects/Competitor_Intelligence__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisitions / Joint Ventures</fullName>
            </value>
            <value>
                <fullName>Hot Topic</fullName>
            </value>
            <value>
                <fullName>Intelligence</fullName>
            </value>
            <value>
                <fullName>Org Resources Change</fullName>
            </value>
            <value>
                <fullName>Rumor</fullName>
            </value>
            <value>
                <fullName>Technoology Trend / Capability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>