force-app/main/default/objects/Competitor_Intelligence__c/fields/Validated__c.field-meta.xml
<CustomField>
    <fullName>Validated__c</fullName>
    <label>Validation on Rumor or Hot Topic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Print</fullName>
            </value>
            <value>
                <fullName>Multiple Sources</fullName>
            </value>
            <value>
                <fullName>One Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>